--- a/public/02-catalog.html
+++ b/public/02-catalog.html
@@ -647,8 +647,10 @@
 							<div class="sCatalogBody__row row">
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -718,8 +720,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -789,8 +793,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -860,8 +866,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -931,8 +939,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -1002,8 +1012,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -1073,8 +1085,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -1144,8 +1158,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -1215,8 +1231,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -1286,8 +1304,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -1357,8 +1377,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -1428,8 +1450,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -1499,8 +1523,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -1570,8 +1596,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -1641,8 +1669,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -1712,8 +1742,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -1783,8 +1815,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -1854,8 +1888,10 @@
 								</div>
 								<div class="sCatalogBody__col-card col-12 col-md-6 col-lg-4 col-xxl-auto">
 									<div class="product-card">
-										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-										</div>
+										<a class="product-card__img-wrap" href="#">
+											<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+											</div>
+										</a>
 										<div class="rating-info">
 											<div class="rating-info__stars">
 												<svg class="icon icon-star  active">
@@ -1986,8 +2022,10 @@
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<div class="product-card">
-													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-													</div>
+													<a class="product-card__img-wrap" href="#">
+														<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+														</div>
+													</a>
 													<div class="rating-info">
 														<div class="rating-info__stars">
 															<svg class="icon icon-star  active">
@@ -2039,8 +2077,10 @@
 											</div>
 											<div class="swiper-slide">
 												<div class="product-card">
-													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-													</div>
+													<a class="product-card__img-wrap" href="#">
+														<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+														</div>
+													</a>
 													<div class="rating-info">
 														<div class="rating-info__stars">
 															<svg class="icon icon-star  active">
@@ -2092,8 +2132,10 @@
 											</div>
 											<div class="swiper-slide">
 												<div class="product-card">
-													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-													</div>
+													<a class="product-card__img-wrap" href="#">
+														<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+														</div>
+													</a>
 													<div class="rating-info">
 														<div class="rating-info__stars">
 															<svg class="icon icon-star  active">
@@ -2145,8 +2187,10 @@
 											</div>
 											<div class="swiper-slide">
 												<div class="product-card">
-													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-													</div>
+													<a class="product-card__img-wrap" href="#">
+														<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+														</div>
+													</a>
 													<div class="rating-info">
 														<div class="rating-info__stars">
 															<svg class="icon icon-star  active">
@@ -2198,8 +2242,10 @@
 											</div>
 											<div class="swiper-slide">
 												<div class="product-card">
-													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-													</div>
+													<a class="product-card__img-wrap" href="#">
+														<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+														</div>
+													</a>
 													<div class="rating-info">
 														<div class="rating-info__stars">
 															<svg class="icon icon-star  active">
@@ -2257,8 +2303,10 @@
 											</div>
 											<div class="swiper-slide">
 												<div class="product-card">
-													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-													</div>
+													<a class="product-card__img-wrap" href="#">
+														<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+														</div>
+													</a>
 													<div class="rating-info">
 														<div class="rating-info__stars">
 															<svg class="icon icon-star  active">
@@ -2316,8 +2364,10 @@
 											</div>
 											<div class="swiper-slide">
 												<div class="product-card">
-													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-													</div>
+													<a class="product-card__img-wrap" href="#">
+														<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+														</div>
+													</a>
 													<div class="rating-info">
 														<div class="rating-info__stars">
 															<svg class="icon icon-star  active">
@@ -2375,8 +2425,10 @@
 											</div>
 											<div class="swiper-slide">
 												<div class="product-card">
-													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-													</div>
+													<a class="product-card__img-wrap" href="#">
+														<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+														</div>
+													</a>
 													<div class="rating-info">
 														<div class="rating-info__stars">
 															<svg class="icon icon-star  active">
@@ -2434,8 +2486,10 @@
 											</div>
 											<div class="swiper-slide">
 												<div class="product-card">
-													<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-													</div>
+													<a class="product-card__img-wrap" href="#">
+														<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+														</div>
+													</a>
 													<div class="rating-info">
 														<div class="rating-info__stars">
 															<svg class="icon icon-star  active">
