--- a/public/12-favorits.html
+++ b/public/12-favorits.html
@@ -461,8 +461,10 @@
 						</div>
 						<div class="sFavorites__items col">
 							<div class="product-card">
-								<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-								</div>
+								<a class="product-card__img-wrap" href="#">
+									<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+									</div>
+								</a>
 								<div class="rating-info">
 									<div class="rating-info__stars">
 										<svg class="icon icon-star  active">
@@ -518,8 +520,10 @@
 								</div>
 							</div>
 							<div class="product-card">
-								<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-								</div>
+								<a class="product-card__img-wrap" href="#">
+									<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+									</div>
+								</a>
 								<div class="rating-info">
 									<div class="rating-info__stars">
 										<svg class="icon icon-star  active">
@@ -575,8 +579,10 @@
 								</div>
 							</div>
 							<div class="product-card">
-								<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-								</div>
+								<a class="product-card__img-wrap" href="#">
+									<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+									</div>
+								</a>
 								<div class="rating-info">
 									<div class="rating-info__stars">
 										<svg class="icon icon-star  active">
@@ -632,8 +638,10 @@
 								</div>
 							</div>
 							<div class="product-card">
-								<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-								</div>
+								<a class="product-card__img-wrap" href="#">
+									<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+									</div>
+								</a>
 								<div class="rating-info">
 									<div class="rating-info__stars">
 										<svg class="icon icon-star  active">
@@ -689,8 +697,10 @@
 								</div>
 							</div>
 							<div class="product-card">
-								<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-								</div>
+								<a class="product-card__img-wrap" href="#">
+									<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+									</div>
+								</a>
 								<div class="rating-info">
 									<div class="rating-info__stars">
 										<svg class="icon icon-star  active">
@@ -746,8 +756,10 @@
 								</div>
 							</div>
 							<div class="product-card">
-								<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-								</div>
+								<a class="product-card__img-wrap" href="#">
+									<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+									</div>
+								</a>
 								<div class="rating-info">
 									<div class="rating-info__stars">
 										<svg class="icon icon-star  active">
@@ -803,8 +815,10 @@
 								</div>
 							</div>
 							<div class="product-card">
-								<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-								</div>
+								<a class="product-card__img-wrap" href="#">
+									<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+									</div>
+								</a>
 								<div class="rating-info">
 									<div class="rating-info__stars">
 										<svg class="icon icon-star  active">
@@ -860,8 +874,10 @@
 								</div>
 							</div>
 							<div class="product-card">
-								<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
-								</div>
+								<a class="product-card__img-wrap" href="#">
+									<div class="product-card__top"><img src="img/product-card-1.jpg" alt="" loading="lazy"/>
+									</div>
+								</a>
 								<div class="rating-info">
 									<div class="rating-info__stars">
 										<svg class="icon icon-star  active">
