--- a/public/02-catalog.html
+++ b/public/02-catalog.html
@@ -1568,10 +1568,7 @@
 										</div>
 										<div class="product-card__buttons">
 											<div class="product-card__add-buttons">
-												<button class="product-card__to-cart">
-													<svg class="icon icon-cartplus ">
-														<use xlink:href="img/svg/sprite.svg#cartplus"></use>
-													</svg><span>В корзину</span>
+												<button class="product-card__analog">Подобрать аналог
 												</button>
 												<button class="product-card__to-bookmarks" title="В закладки">
 													<svg class="icon icon-bookmarks ">
@@ -1584,12 +1581,9 @@
 													</svg>
 												</button>
 											</div>
-											<button class="product-card__to-buy" title="Купить в один клик">
-												<svg class="icon icon-oneclick ">
-													<use xlink:href="img/svg/sprite.svg#oneclick"></use>
-												</svg><span>Купить в 1 клик</span>
+											<button class="product-card__notify">Сообщить о поступлении
 											</button>
-											<div class="product-card__availability">В наличии
+											<div class="product-card__unavailability">Нет наличии
 											</div>
 										</div>
 									</div>
@@ -1641,10 +1635,7 @@
 										</div>
 										<div class="product-card__buttons">
 											<div class="product-card__add-buttons">
-												<button class="product-card__to-cart">
-													<svg class="icon icon-cartplus ">
-														<use xlink:href="img/svg/sprite.svg#cartplus"></use>
-													</svg><span>В корзину</span>
+												<button class="product-card__analog">Подобрать аналог
 												</button>
 												<button class="product-card__to-bookmarks" title="В закладки">
 													<svg class="icon icon-bookmarks ">
@@ -1657,12 +1648,9 @@
 													</svg>
 												</button>
 											</div>
-											<button class="product-card__to-buy" title="Купить в один клик">
-												<svg class="icon icon-oneclick ">
-													<use xlink:href="img/svg/sprite.svg#oneclick"></use>
-												</svg><span>Купить в 1 клик</span>
+											<button class="product-card__notify">Сообщить о поступлении
 											</button>
-											<div class="product-card__availability">В наличии
+											<div class="product-card__unavailability">Нет наличии
 											</div>
 										</div>
 									</div>
@@ -1714,10 +1702,7 @@
 										</div>
 										<div class="product-card__buttons">
 											<div class="product-card__add-buttons">
-												<button class="product-card__to-cart">
-													<svg class="icon icon-cartplus ">
-														<use xlink:href="img/svg/sprite.svg#cartplus"></use>
-													</svg><span>В корзину</span>
+												<button class="product-card__analog">Подобрать аналог
 												</button>
 												<button class="product-card__to-bookmarks" title="В закладки">
 													<svg class="icon icon-bookmarks ">
@@ -1730,12 +1715,9 @@
 													</svg>
 												</button>
 											</div>
-											<button class="product-card__to-buy" title="Купить в один клик">
-												<svg class="icon icon-oneclick ">
-													<use xlink:href="img/svg/sprite.svg#oneclick"></use>
-												</svg><span>Купить в 1 клик</span>
+											<button class="product-card__notify">Сообщить о поступлении
 											</button>
-											<div class="product-card__availability">В наличии
+											<div class="product-card__unavailability">Нет наличии
 											</div>
 										</div>
 									</div>
@@ -1787,10 +1769,7 @@
 										</div>
 										<div class="product-card__buttons">
 											<div class="product-card__add-buttons">
-												<button class="product-card__to-cart">
-													<svg class="icon icon-cartplus ">
-														<use xlink:href="img/svg/sprite.svg#cartplus"></use>
-													</svg><span>В корзину</span>
+												<button class="product-card__analog">Подобрать аналог
 												</button>
 												<button class="product-card__to-bookmarks" title="В закладки">
 													<svg class="icon icon-bookmarks ">
@@ -1803,12 +1782,9 @@
 													</svg>
 												</button>
 											</div>
-											<button class="product-card__to-buy" title="Купить в один клик">
-												<svg class="icon icon-oneclick ">
-													<use xlink:href="img/svg/sprite.svg#oneclick"></use>
-												</svg><span>Купить в 1 клик</span>
+											<button class="product-card__notify">Сообщить о поступлении
 											</button>
-											<div class="product-card__availability">В наличии
+											<div class="product-card__unavailability">Нет наличии
 											</div>
 										</div>
 									</div>
@@ -1860,10 +1836,7 @@
 										</div>
 										<div class="product-card__buttons">
 											<div class="product-card__add-buttons">
-												<button class="product-card__to-cart">
-													<svg class="icon icon-cartplus ">
-														<use xlink:href="img/svg/sprite.svg#cartplus"></use>
-													</svg><span>В корзину</span>
+												<button class="product-card__analog">Подобрать аналог
 												</button>
 												<button class="product-card__to-bookmarks" title="В закладки">
 													<svg class="icon icon-bookmarks ">
@@ -1876,12 +1849,9 @@
 													</svg>
 												</button>
 											</div>
-											<button class="product-card__to-buy" title="Купить в один клик">
-												<svg class="icon icon-oneclick ">
-													<use xlink:href="img/svg/sprite.svg#oneclick"></use>
-												</svg><span>Купить в 1 клик</span>
+											<button class="product-card__notify">Сообщить о поступлении
 											</button>
-											<div class="product-card__availability">В наличии
+											<div class="product-card__unavailability">Нет наличии
 											</div>
 										</div>
 									</div>
@@ -1933,10 +1903,7 @@
 										</div>
 										<div class="product-card__buttons">
 											<div class="product-card__add-buttons">
-												<button class="product-card__to-cart">
-													<svg class="icon icon-cartplus ">
-														<use xlink:href="img/svg/sprite.svg#cartplus"></use>
-													</svg><span>В корзину</span>
+												<button class="product-card__analog">Подобрать аналог
 												</button>
 												<button class="product-card__to-bookmarks" title="В закладки">
 													<svg class="icon icon-bookmarks ">
@@ -1949,12 +1916,9 @@
 													</svg>
 												</button>
 											</div>
-											<button class="product-card__to-buy" title="Купить в один клик">
-												<svg class="icon icon-oneclick ">
-													<use xlink:href="img/svg/sprite.svg#oneclick"></use>
-												</svg><span>Купить в 1 клик</span>
+											<button class="product-card__notify">Сообщить о поступлении
 											</button>
-											<div class="product-card__availability">В наличии
+											<div class="product-card__unavailability">Нет наличии
 											</div>
 										</div>
 									</div>
