--- a/public/10-basket.html
+++ b/public/10-basket.html
@@ -469,7 +469,7 @@
 									<div class="basket-item__number d-block d-sm-none" data-label="Артикул ">1026667
 									</div>
 								</td>
-								<td class="basket-item__number d-none d-sm-block" data-label="Артикул">1026667
+								<td class="basket-item__number d-none d-sm-table-cell" data-label="Артикул">1026667
 								</td>
 								<td class="basket-item__count" data-label="Количество">
 									<div class="addBlock">
@@ -501,7 +501,7 @@
 									<div class="basket-item__number d-block d-sm-none" data-label="Артикул ">512300330
 									</div>
 								</td>
-								<td class="basket-item__number d-none d-sm-block" data-label="Артикул">512300330
+								<td class="basket-item__number d-none d-sm-table-cell" data-label="Артикул">512300330
 								</td>
 								<td class="basket-item__count" data-label="Количество">
 									<div class="addBlock">
